@@ -1,10 +1,13 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 18, 2017
+# Last Updated :     August 19, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
+
+08/19/17
+- Updated Readme
 
 08/18/17
 - Only the owner can use the /shutdown and /restart command
